--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,11 @@ body{
 	min-width: 800px;
 	max-width : 1200px;
 	margin: 0 auto;
+	font-family: verdana;
 }
 
 .home{
-	background: url("../img/home.jpg") center;
+	background: url("../img/fundo.jpg") center no-repeat;
 	margin: 15px 0;
 	background-color: #CCC;
 	height: 155px;
@@ -32,7 +33,6 @@ body{
 	padding: 5px 10px;
 	border-radius: 5px;
 	float: left;
-	font-family: verdana;
 }
 
 .home div:HOVER, .selecionado{
@@ -43,12 +43,11 @@ body{
 .conteudo{
 	background-color: #EEE;
 	border-radius: 5px;
-	padding: 10px;
+	padding: 20px;
 }
 
 .conteudo p{
 	text-align: center;
-	font-family: verdana;
 }
 
 .nd{
@@ -56,6 +55,55 @@ body{
 	margin: 10px auto;
 	padding: 5px;
 	width: 200px;
+	background-color: #444;
+	color: #F5F5F5;
+}
+
+.conteudo #conteudo{
+	font-weight: bold;
+}
+
+.conteudo #tabela{
+	margin: auto;
+	overflow: hidden;
+	border-radius: 7px 7px 0px 0px;
+}
+
+.tabela{
+	width: 100%;
+	border-collapse: collapse;
+	border-radius: 10px; 
+}
+
+.tabela th{
+	background-color: #444;
+	color: white;
+	padding: 10px;
+	text-align: left;
+	border: solid 1px #111;
+	font-weight: normal;
+}
+
+.tabela td{
+	padding: 10px;
+	text-align: left;
+	border: solid 1px #111;
+}
+
+.tabela #par{
+	background-color: #DDD;
+}
+
+.conteudo .info{
+	color: red;
+	border: solid 1px #111;
+}
+
+.conteudo .texto{
+	border-radius: 5px;
+	margin: 10px auto;
+	padding: 5px;
+	width: 500px;
 	background-color: #444;
 	color: #F5F5F5;
 }
